--- a/todo/todoapp.html
+++ b/todo/todoapp.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/try/todoapp.css">
+    <link rel="stylesheet" href="/todo/todoapp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Open+Sans:wght@300&display=swap"
         rel="stylesheet">
-    <title>try</title>
+    <title>My To-do App</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 </ul>
             </div>
         </div>
-        <button onclick="sortMyTodoList()">Sort</button>
+        <button id="mySortButton" onclick="sortMyTodoList()">Sort</button>
     </div>
 
 
