I added a background image and some padding and margin.

--- a/todo/todoapp.html
+++ b/todo/todoapp.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="card" style="width: 22rem;">
+    <div class="card mx-auto" >
         <div class="card-body">
             <nav class="inputContainer">
                 <input type="text" class="myInput" id="myInput" placeholder="Enter Your Task">
@@ -25,15 +25,11 @@
             </nav>
             <div class="todos">
                 <ul class="myTodos">
-                    <!-- <div class="myTodo">
-                <h3>gym</h3>
-                <button class="removeMyTodo">REMOVE</button>
-                <button class="editMyTodo">EDIT</button>
-            </div> -->
+          
                 </ul>
             </div>
         </div>
-        <button id="mySortButton" onclick="sortMyTodoList()">Sort</button>
+        
     </div>
 
 
